<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    android:id="@+id/MainLayout"
    tools:context="org.invotek.apps.easyvsd_shell.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:id="@+id/NavOptions"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:background="@color/dimgray"
                android:columnCount="6"
                android:rowCount="4"
                android:visibility="visible">

                <HorizontalScrollView
                    android:id="@+id/ActivityGroups_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_marginRight="10dp"
                    android:layout_row="0"
                    android:background="@color/silver"
                    android:fillViewport="true"
                    android:visibility="gone" />

                <HorizontalScrollView
                    android:id="@+id/ActivityPages_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_marginRight="10dp"
                    android:layout_row="1"
                    android:background="@color/silver"
                    android:fillViewport="true"
                    android:visibility="gone" />

                <GridLayout
                    android:id="@+id/DrawingOptions"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_column="5"
                    android:layout_row="2"
                    android:layout_rowSpan="2"
                    android:columnCount="6"
                    android:rowCount="2"
                    android:visibility="gone">

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/StylusM"
                        android:layout_column="0"
                        android:layout_row="0"
                        android:padding="0dp"
                        android:text="@string/stylus_width_m" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/StylusEL"
                        android:layout_column="0"
                        android:layout_row="1"
                        android:padding="0dp"
                        android:text="@string/stylus_width_el" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/StylusErase"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:padding="0dp"
                        android:text="@string/stylus_erase" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ClearDrawing"
                        android:layout_column="1"
                        android:layout_gravity="top"
                        android:layout_row="1"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorBlack"
                        android:layout_column="2"
                        android:layout_gravity="top"
                        android:layout_row="0"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorBlue"
                        android:layout_column="3"
                        android:layout_gravity="top"
                        android:layout_row="0"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorRed"
                        android:layout_column="4"
                        android:layout_gravity="top"
                        android:layout_row="0"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorPurple"
                        android:layout_column="5"
                        android:layout_gravity="top"
                        android:layout_row="0"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorPink"
                        android:layout_column="2"
                        android:layout_gravity="top"
                        android:layout_row="1"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorYellow"
                        android:layout_column="3"
                        android:layout_gravity="top"
                        android:layout_row="1"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorWhite"
                        android:layout_column="4"
                        android:layout_gravity="top"
                        android:layout_row="1"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />

                    <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                        android:id="@+id/ColorLimeGreen"
                        android:layout_column="5"
                        android:layout_gravity="top"
                        android:layout_row="1"
                        android:padding="0dp"
                        android:text="@string/clear_drawings"
                        android:textSize="24sp" />
                </GridLayout>
            </GridLayout>

            <SurfaceView
                android:id="@+id/ActivityVideo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/NavOptions"
                android:contentDescription="@string/activity_video"
                android:scaleType="fitStart"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ActivityImage"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/NavOptions"
                android:contentDescription="@string/activity_image"
                android:scaleType="fitStart"
                android:visibility="visible" />

            <org.invotek.apps.easyvsd_shell.NewDrawingView
                android:id="@+id/dvDrawingView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/NavOptions" />

            <GridLayout
                android:id="@+id/adminPanel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/dimgray"
                android:columnCount="16"
                android:orientation="horizontal"
                android:rowCount="1"
                android:visibility="gone">

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_newActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="0"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_newPage"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="1"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_editHotspot"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="2"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_cancelHotspot"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="3"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_drawingMode"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="4"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_navMode"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="5"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_startRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="6"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_endRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="7"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_deleteHotspot"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="8"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_undo"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="9"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_redo"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="10"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_video_restart"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="11"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_video_skipback"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="3"
                    android:rowCount="12"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_video_play"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="13"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_video_skipforward"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="14"
                    android:rowCount="0"
                    android:visibility="gone" />

                <org.invotek.apps.easyvsd_shell.BackgroundHighlightButton
                    android:id="@+id/btn_video_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:columnCount="3"
                    android:rowCount="15"
                    android:visibility="gone" />
            </GridLayout>

            <org.invotek.apps.easyvsd_shell.AnimatingView
                android:id="@+id/AnimationViewRemoving"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <org.invotek.apps.easyvsd_shell.AnimatingView
                android:id="@+id/AnimationViewShowing"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
